tests/support/validation/invalid/block_without_runs/crew.crw
CSC;abc11017;Sunday    ; 6;02;BUS12021  ;Cabot   ;Cabot Sunday REMAKE
PCE;123-3001 ;   9913546;7      ;   4486195;    1;cabot ;0257a;cabot ;0307a;cabot ;0958a;cabot ;0958a;017;;
